@@ -5,6 +5,7 @@
 ### Changed
 - Fitness function based on protein output extrapolation.
 - Requires latPack/1.9.1-15 or greater (but not enforced)
+- Fitness function is purely linear (no x / x0 + x transformation)
 
 ## [0.0.10] - 2019-03-17
 ### Added
